CLASE-05/kind-k8s-vagrant/vagrant/guestbook/guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: contenedor-guestbook
        image: roxsross12/guestbook
        ports:
          - name: http-server
            containerPort: 5000
