CLASE-05/kind-k8s-vagrant/vagrant/guestbook/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  type: NodePort
  selector:
    app: guestbook
  ports:
  - port: 80
    targetPort: http-server
    nodePort: 30005
