CLASE-05/kind-k8s-vagrant/vagrant/guestbook/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: redis-server
